--- a/index.html
+++ b/index.html
@@ -47,8 +47,19 @@
   </header>
 
   <main>
-    Take your financial life online. Your Easybank account will be a one-stop-shop
-    for spending, saving, budgeting, investing, and much more.
+    <section class="hero">
+      <div class="hero-image"></div>
+
+      <div class="hero-text">
+        <h1>Next generation digital banking</h1>
+        <p>Take your financial life online. Your Easybank account will be a one-stop-shop
+          for spending, saving, budgeting, investing, and much more.
+        </p>
+      </div>
+
+      <button type="button" class="cta-btn">Request Invite</button>
+    </section>
+
   </main>
 
 
@@ -60,7 +71,7 @@
 
 
 
-  <!-- Next generation digital banking
+  <!-- 
 
   Take your financial life online. Your Easybank account will be a one-stop-shop
   for spending, saving, budgeting, investing, and much more.
