--- a/index.html
+++ b/index.html
@@ -19,48 +19,52 @@
 
 <body>
 
-  <header class="header flex">
+  <div class="container">
+    <header class="header flex">
 
-    <nav>
-      <a href="#" class="logo"><img src="images/logo.svg" alt="easybank"></a>
+      <nav>
+        <a href="#" class="logo"><img src="images/logo.svg" alt="easybank"></a>
+  
+        <div class="header-links hide-for-mobile flex">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+          <a href="#">Blog</a>
+          <a href="#">Careers</a>
+        </div>
+  
+        <!-- <button type="button" class="mobile-nav-toggle hide-for-desktop"></button> -->
+        <div class="mobile-nav-toggle hide-for-desktop">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+  
+        <div class="overlay"></div>
+  
+        <button type="button" class="cta-btn hide-for-mobile">Request Invite</button>
+      </nav>
+  
+    </header>
+  
+    <main>
+      <section class="hero">
+        <div class="hero-image"></div>
+  
+        <div class="hero-text flow">
+          <h1>Next generation digital banking</h1>
+          <p>Take your financial life online. Your Easybank account will be a one-stop-shop
+            for spending, saving, budgeting, investing, and much more.
+          </p>
+          <button type="button" class="cta-btn">Request Invite</button>
+        </div>
+  
+      </section>
+  
+    </main>
+  </div>
 
-      <div class="header-links hide-for-mobile flex">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-        <a href="#">Blog</a>
-        <a href="#">Careers</a>
-      </div>
-
-      <!-- <button type="button" class="mobile-nav-toggle hide-for-desktop"></button> -->
-      <div class="mobile-nav-toggle">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-
-      <div class="overlay"></div>
-
-      <button type="button" class="cta-btn hide-for-mobile">Request Invite</button>
-    </nav>
-
-  </header>
-
-  <main>
-    <section class="hero">
-      <div class="hero-image"></div>
-
-      <div class="hero-text">
-        <h1>Next generation digital banking</h1>
-        <p>Take your financial life online. Your Easybank account will be a one-stop-shop
-          for spending, saving, budgeting, investing, and much more.
-        </p>
-      </div>
-
-      <button type="button" class="cta-btn">Request Invite</button>
-    </section>
-
-  </main>
+  
 
 
 
