hero section done

--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
       </nav>
   
     </header>
+  </div>
   
-    <main>
-      <section class="hero">
+  <main>
+    <section class="hero">
+      <div class="container">
         <div class="hero-image"></div>
-  
+
         <div class="hero-text flow">
           <h1>Next generation digital banking</h1>
           <p>Take your financial life online. Your Easybank account will be a one-stop-shop
@@ -58,13 +60,12 @@
           </p>
           <button type="button" class="cta-btn">Request Invite</button>
         </div>
-  
-      </section>
-  
-    </main>
-  </div>
+      </div>
+    </section>
 
-  
+  </main>
+
+
 
 
 
