--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   </div>
   
   <main>
+
     <section class="hero">
       <div class="container">
         <div class="hero-image"></div>
@@ -60,6 +61,55 @@
           </p>
           <button type="button" class="cta-btn">Request Invite</button>
         </div>
+      </div>
+    </section>
+
+    <section class="features">
+      <div class="container">
+
+        <div class="features-intro">
+          <h2>Why choose Easybank?</h2>
+          <p>  We leverage Open Banking to turn your bank account into your financial hub. Control
+            your finances like never before.
+          </p>
+        </div>
+
+        <div class="features-info">
+
+          <div class="features-item flow">
+            <div class="features-icon"><img src="/images/icon-online.svg" alt="online banking"></div>
+            <div class="features-title">Online Banking</div>
+            <div class="features-description">Our modern web and mobile applications allow you to keep track of your finances
+              wherever you are in the world.
+            </div>
+          </div>
+
+          <div class="features-item flow">
+            <div class="features-icon"><img src="/images/icon-budgeting.svg" alt="budgeting"></div>
+            <div class="features-title">Simple Budgeting</div>
+            <div class="features-description">See exactly where your money goes each month. Receive notifications when you’re
+              close to hitting your limits.
+            </div>
+          </div>
+
+          <div class="features-item flow">
+            <div class="features-icon"><img src="/images/icon-onboarding.svg" alt="onboarding"></div>
+            <div class="features-title">Fast Onboarding</div>
+            <div class="features-description">We don’t do branches. Open your account in minutes online and start taking control
+              of your finances right away.
+            </div>
+          </div>
+
+          <div class="features-item flow">
+            <div class="features-icon"><img src="/images/icon-api.svg" alt="open API"></div>
+            <div class="features-title">Open API</div>
+            <div class="features-description">Manage your savings, investments, pension, and much more from one account. Tracking
+              your money has never been easier.
+            </div>
+          </div>
+
+        </div>
+
       </div>
     </section>
 
@@ -77,36 +127,6 @@
 
 
   <!-- 
-
-  Take your financial life online. Your Easybank account will be a one-stop-shop
-  for spending, saving, budgeting, investing, and much more.
-
-  Request Invite
-
-
-
-  Why choose Easybank?
-
-  We leverage Open Banking to turn your bank account into your financial hub. Control
-  your finances like never before.
-
-  Online Banking
-  Our modern web and mobile applications allow you to keep track of your finances
-  wherever you are in the world.
-
-  Simple Budgeting
-  See exactly where your money goes each month. Receive notifications when you’re
-  close to hitting your limits.
-
-  Fast Onboarding
-  We don’t do branches. Open your account in minutes online and start taking control
-  of your finances right away.
-
-  Open API
-  Manage your savings, investments, pension, and much more from one account. Tracking
-  your money has never been easier.
-
-
 
   Latest Articles
 
