--- a/index.html
+++ b/index.html
@@ -74,38 +74,38 @@
           </p>
         </div>
 
-        <div class="features-info">
+        <div class="features-info flex-col">
 
-          <div class="features-item flow">
+          <div class="features-item flow flex-col">
             <div class="features-icon"><img src="/images/icon-online.svg" alt="online banking"></div>
             <div class="features-title">Online Banking</div>
-            <div class="features-description">Our modern web and mobile applications allow you to keep track of your finances
+            <p>Our modern web and mobile applications allow you to keep track of your finances
               wherever you are in the world.
-            </div>
+            </p>
           </div>
 
-          <div class="features-item flow">
+          <div class="features-item flow flex-col">
             <div class="features-icon"><img src="/images/icon-budgeting.svg" alt="budgeting"></div>
             <div class="features-title">Simple Budgeting</div>
-            <div class="features-description">See exactly where your money goes each month. Receive notifications when you’re
+            <p>See exactly where your money goes each month. Receive notifications when you’re
               close to hitting your limits.
-            </div>
+            </p>
           </div>
 
-          <div class="features-item flow">
+          <div class="features-item flow flex-col">
             <div class="features-icon"><img src="/images/icon-onboarding.svg" alt="onboarding"></div>
             <div class="features-title">Fast Onboarding</div>
-            <div class="features-description">We don’t do branches. Open your account in minutes online and start taking control
+            <p>We don’t do branches. Open your account in minutes online and start taking control
               of your finances right away.
-            </div>
+            </p>
           </div>
 
-          <div class="features-item flow">
+          <div class="features-item flow flex-col">
             <div class="features-icon"><img src="/images/icon-api.svg" alt="open API"></div>
             <div class="features-title">Open API</div>
-            <div class="features-description">Manage your savings, investments, pension, and much more from one account. Tracking
+            <p>Manage your savings, investments, pension, and much more from one account. Tracking
               your money has never been easier.
-            </div>
+            </p>
           </div>
 
         </div>
@@ -114,14 +114,6 @@
     </section>
 
   </main>
-
-
-
-
-
-
-
-
 
 
 
