features section for tablets and desktop

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </p>
         </div>
 
-        <div class="features-info flex-col">
+        <div class="features-info flex">
 
           <div class="features-item flow flex-col">
             <div class="features-icon"><img src="/images/icon-online.svg" alt="online banking"></div>
