--- a/index.html
+++ b/index.html
@@ -113,36 +113,61 @@
       </div>
     </section>
 
+    <section class="articles">
+      <div class="container">
+        <h2>Latest Articles</h2>
+
+        <div class="articles-wrapper">
+
+          <article class="articles-item">
+            <div class="articles-image"></div>
+            <div class="articles-text">
+              <div class="acricles-author">By Claire Robinson</div>
+              <div class="articles-title">Receive money in any currency with no fees</div>
+              <p>The world is getting smaller and we’re becoming more mobile. So why should you be
+                forced to only receive money in a single …</p>
+            </div>
+          </article>
+
+          <article class="articles-item">
+            <div class="articles-image"></div>
+            <div class="articles-text">
+              <div class="acricles-author">By Wilson Hutton</div>
+              <div class="articles-title">Treat yourself without worrying about money</div>
+              <p>Our simple budgeting feature allows you to separate out your spending and set
+                realistic limits each month. That means you …</p>
+            </div>
+          </article>
+
+          <article class="articles-item">
+            <div class="articles-image"></div>
+            <div class="articles-text">
+              <div class="acricles-author">By Wilson Hutton</div>
+              <div class="articles-title">Take your Easybank card wherever you go</div>
+              <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases
+                while you’re abroad. We’ll even show you …</p>
+            </div>
+          </article>
+
+          <article class="articles-item">
+            <div class="articles-image"></div>
+            <div class="articles-text">
+              <div class="acricles-author">By Claire Robinson</div>
+              <div class="articles-title">Our invite-only Beta accounts are now live!</div>
+              <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta.
+                It’s easy to request an invite through the site …</p>
+            </div>
+          </article>
+
+        </div>
+      </div>
+    </section>
+
   </main>
 
-
-
+  <footer></footer>
 
   <!-- 
-
-  Latest Articles
-
-  By Claire Robinson
-  Receive money in any currency with no fees
-  The world is getting smaller and we’re becoming more mobile. So why should you be
-  forced to only receive money in a single …
-
-  By Wilson Hutton
-  Treat yourself without worrying about money
-  Our simple budgeting feature allows you to separate out your spending and set
-  realistic limits each month. That means you …
-
-  By Wilson Hutton
-  Take your Easybank card wherever you go
-  We want you to enjoy your travels. This is why we don’t charge any fees on purchases
-  while you’re abroad. We’ll even show you …
-
-  By Claire Robinson
-  Our invite-only Beta accounts are now live!
-  After a lot of hard work by the whole team, we’re excited to launch our closed beta.
-  It’s easy to request an invite through the site ...
-
-
 
   About Us
   Contact
