articles section done

--- a/index.html
+++ b/index.html
@@ -119,45 +119,45 @@
 
         <div class="articles-wrapper">
 
-          <article class="articles-item">
-            <div class="articles-image"></div>
-            <div class="articles-text">
-              <div class="acricles-author">By Claire Robinson</div>
+          <a href="#" class="articles-item">
+            <div class="articles-image" style="background-image: url(/images/image-currency.jpg);"></div>
+            <div class="articles-text flow">
+              <div class="articles-author">By Claire Robinson</div>
               <div class="articles-title">Receive money in any currency with no fees</div>
               <p>The world is getting smaller and we’re becoming more mobile. So why should you be
                 forced to only receive money in a single …</p>
             </div>
-          </article>
+          </a>
 
-          <article class="articles-item">
-            <div class="articles-image"></div>
-            <div class="articles-text">
-              <div class="acricles-author">By Wilson Hutton</div>
+          <a href="#" class="articles-item">
+            <div class="articles-image" style="background-image: url(/images/image-restaurant.jpg);"></div>
+            <div class="articles-text flow">
+              <div class="articles-author">By Wilson Hutton</div>
               <div class="articles-title">Treat yourself without worrying about money</div>
               <p>Our simple budgeting feature allows you to separate out your spending and set
                 realistic limits each month. That means you …</p>
             </div>
-          </article>
+          </a>
 
-          <article class="articles-item">
-            <div class="articles-image"></div>
-            <div class="articles-text">
-              <div class="acricles-author">By Wilson Hutton</div>
+          <a href="#" class="articles-item">
+            <div class="articles-image" style="background-image: url(/images/image-plane.jpg);"></div>
+            <div class="articles-text flow">
+              <div class="articles-author">By Wilson Hutton</div>
               <div class="articles-title">Take your Easybank card wherever you go</div>
               <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases
                 while you’re abroad. We’ll even show you …</p>
             </div>
-          </article>
+          </a>
 
-          <article class="articles-item">
-            <div class="articles-image"></div>
-            <div class="articles-text">
-              <div class="acricles-author">By Claire Robinson</div>
+          <a href="#" class="articles-item">
+            <div class="articles-image" style="background-image: url(/images/image-confetti.jpg);"></div>
+            <div class="articles-text flow">
+              <div class="articles-author">By Claire Robinson</div>
               <div class="articles-title">Our invite-only Beta accounts are now live!</div>
               <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta.
                 It’s easy to request an invite through the site …</p>
             </div>
-          </article>
+          </a>
 
         </div>
       </div>
