--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header flex">
 
       <nav>
-        <a href="#" class="logo"><img src="images/logo.svg" alt="easybank"></a>
+        <a href="#" class="logo"><img src="https://any2h.github.io/easybank-landing-page/images/logo.svg" alt="easybank"></a>
   
         <div class="header-links hide-for-mobile flex">
           <a href="#">Home</a>
@@ -77,7 +77,7 @@
         <div class="features-info flex">
 
           <div class="features-item flow flex-col">
-            <div class="features-icon"><img src="/images/icon-online.svg" alt="online banking"></div>
+            <div class="features-icon"><img src="https://any2h.github.io/easybank-landing-page/images/icon-online.svg" alt="online banking"></div>
             <div class="features-title">Online Banking</div>
             <p>Our modern web and mobile applications allow you to keep track of your finances
               wherever you are in the world.
@@ -85,7 +85,7 @@
           </div>
 
           <div class="features-item flow flex-col">
-            <div class="features-icon"><img src="/images/icon-budgeting.svg" alt="budgeting"></div>
+            <div class="features-icon"><img src="https://any2h.github.io/easybank-landing-page/images/icon-budgeting.svg" alt="budgeting"></div>
             <div class="features-title">Simple Budgeting</div>
             <p>See exactly where your money goes each month. Receive notifications when you’re
               close to hitting your limits.
@@ -93,7 +93,7 @@
           </div>
 
           <div class="features-item flow flex-col">
-            <div class="features-icon"><img src="/images/icon-onboarding.svg" alt="onboarding"></div>
+            <div class="features-icon"><img src="https://any2h.github.io/easybank-landing-page/images/icon-onboarding.svg" alt="onboarding"></div>
             <div class="features-title">Fast Onboarding</div>
             <p>We don’t do branches. Open your account in minutes online and start taking control
               of your finances right away.
@@ -101,7 +101,7 @@
           </div>
 
           <div class="features-item flow flex-col">
-            <div class="features-icon"><img src="/images/icon-api.svg" alt="open API"></div>
+            <div class="features-icon"><img src="https://any2h.github.io/easybank-landing-page/images/icon-api.svg" alt="open API"></div>
             <div class="features-title">Open API</div>
             <p>Manage your savings, investments, pension, and much more from one account. Tracking
               your money has never been easier.
@@ -120,7 +120,7 @@
         <div class="articles-wrapper">
 
           <a href="#" class="articles-item">
-            <div class="articles-image" style="background-image: url(/images/image-currency.jpg);"></div>
+            <div class="articles-image" style="background-image: url(https://any2h.github.io/easybank-landing-page/images/image-currency.jpg);"></div>
             <div class="articles-text flow">
               <div class="articles-author">By Claire Robinson</div>
               <div class="articles-title">Receive money in any currency with no fees</div>
@@ -130,7 +130,7 @@
           </a>
 
           <a href="#" class="articles-item">
-            <div class="articles-image" style="background-image: url(/images/image-restaurant.jpg);"></div>
+            <div class="articles-image" style="background-image: url(https://any2h.github.io/easybank-landing-page/images/image-restaurant.jpg);"></div>
             <div class="articles-text flow">
               <div class="articles-author">By Wilson Hutton</div>
               <div class="articles-title">Treat yourself without worrying about money</div>
@@ -140,7 +140,7 @@
           </a>
 
           <a href="#" class="articles-item">
-            <div class="articles-image" style="background-image: url(/images/image-plane.jpg);"></div>
+            <div class="articles-image" style="background-image: url(https://any2h.github.io/easybank-landing-page/images/image-plane.jpg);"></div>
             <div class="articles-text flow">
               <div class="articles-author">By Wilson Hutton</div>
               <div class="articles-title">Take your Easybank card wherever you go</div>
@@ -150,7 +150,7 @@
           </a>
 
           <a href="#" class="articles-item">
-            <div class="articles-image" style="background-image: url(/images/image-confetti.jpg);"></div>
+            <div class="articles-image" style="background-image: url(https://any2h.github.io/easybank-landing-page/images/image-confetti.jpg);"></div>
             <div class="articles-text flow">
               <div class="articles-author">By Claire Robinson</div>
               <div class="articles-title">Our invite-only Beta accounts are now live!</div>
