--- a/index.html
+++ b/index.html
@@ -194,14 +194,7 @@
     </div>
   </footer>
 
-  <!-- 
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
-
-  <script src="/js/script.js"></script>
+  <script src="https://any2h.github.io/easybank-landing-page/js/script.js"></script>
 </body>
 
 </html>
