--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header flex">
 
       <nav>
-        <a href="#" class="logo"><img src="https://any2h.github.io/easybank-landing-page/images/logo.svg" alt="easybank"></a>
+        <a href="#" class="logo"><img src="/images/logo.svg" alt="easybank"></a>
   
         <div class="header__links hide-for-mobile flex">
           <a href="#">Home</a>
@@ -76,7 +76,7 @@
         <div class="features__info flex">
 
           <div class="features__item flow flex-col">
-            <div class="features__icon"><img src="https://any2h.github.io/easybank-landing-page/images/icon-online.svg" alt="online banking"></div>
+            <div class="features__icon"><img src="/images/icon-online.svg" alt="online banking"></div>
             <div class="features__title">Online Banking</div>
             <p>Our modern web and mobile applications allow you to keep track of your finances
               wherever you are in the world.
@@ -84,7 +84,7 @@
           </div>
 
           <div class="features__item flow flex-col">
-            <div class="features__icon"><img src="https://any2h.github.io/easybank-landing-page/images/icon-budgeting.svg" alt="budgeting"></div>
+            <div class="features__icon"><img src="/images/icon-budgeting.svg" alt="budgeting"></div>
             <div class="features__title">Simple Budgeting</div>
             <p>See exactly where your money goes each month. Receive notifications when you’re
               close to hitting your limits.
@@ -92,7 +92,7 @@
           </div>
 
           <div class="features__item flow flex-col">
-            <div class="features__icon"><img src="https://any2h.github.io/easybank-landing-page/images/icon-onboarding.svg" alt="onboarding"></div>
+            <div class="features__icon"><img src="/images/icon-onboarding.svg" alt="onboarding"></div>
             <div class="features__title">Fast Onboarding</div>
             <p>We don’t do branches. Open your account in minutes online and start taking control
               of your finances right away.
@@ -100,7 +100,7 @@
           </div>
 
           <div class="features__item flow flex-col">
-            <div class="features__icon"><img src="https://any2h.github.io/easybank-landing-page/images/icon-api.svg" alt="open API"></div>
+            <div class="features__icon"><img src="/images/icon-api.svg" alt="open API"></div>
             <div class="features__title">Open API</div>
             <p>Manage your savings, investments, pension, and much more from one account. Tracking
               your money has never been easier.
@@ -119,7 +119,7 @@
         <div class="articles__wrapper">
 
           <a href="#" class="articles__item">
-            <div class="articles__image" style="background-image: url(https://any2h.github.io/easybank-landing-page/images/image-currency.jpg);"></div>
+            <div class="articles__image" style="background-image: url(/images/image-currency.jpg);"></div>
             <div class="articles__text flow">
               <div class="articles__author">By Claire Robinson</div>
               <div class="articles__title">Receive money in any currency with no fees</div>
@@ -129,7 +129,7 @@
           </a>
 
           <a href="#" class="articles__item">
-            <div class="articles__image" style="background-image: url(https://any2h.github.io/easybank-landing-page/images/image-restaurant.jpg);"></div>
+            <div class="articles__image" style="background-image: url(/images/image-restaurant.jpg);"></div>
             <div class="articles__text flow">
               <div class="articles__author">By Wilson Hutton</div>
               <div class="articles__title">Treat yourself without worrying about money</div>
@@ -139,7 +139,7 @@
           </a>
 
           <a href="#" class="articles__item">
-            <div class="articles__image" style="background-image: url(https://any2h.github.io/easybank-landing-page/images/image-plane.jpg);"></div>
+            <div class="articles__image" style="background-image: url(/images/image-plane.jpg);"></div>
             <div class="articles__text flow">
               <div class="articles__author">By Wilson Hutton</div>
               <div class="articles__title">Take your Easybank card wherever you go</div>
@@ -149,7 +149,7 @@
           </a>
 
           <a href="#" class="articles__item">
-            <div class="articles__image" style="background-image: url(https://any2h.github.io/easybank-landing-page/images/image-confetti.jpg);"></div>
+            <div class="articles__image" style="background-image: url(/images/image-confetti.jpg);"></div>
             <div class="articles__text flow">
               <div class="articles__author">By Claire Robinson</div>
               <div class="articles__title">Our invite-only Beta accounts are now live!</div>
@@ -193,7 +193,7 @@
     </div>
   </footer>
 
-  <script src="https://any2h.github.io/easybank-landing-page/js/script.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 
 </html>
